2006-03-10  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/testserver/modules/testhttp.tcl:
	Made self-consistent; it does not attempt to use unpublished
	Tcl API calls. Also, preform implicit network-line-end
	translations by Tcl sock handling instead of passing this task
	to user. Means: data sent and received is always in normalized
	internal new-line format instead of new-line/carriage-return format.

	* tcl/http.tcl: The _ns_http_readable was broken as it did not
	correctly refresh the number of bytes in the socket after waiting
	for the data to arrive.

	* tests/http_byteranges.test:
	* tests/http_chunked.test: Data returned from nstest_http calls
	is now in standard internal newline format and not in the network
	format, so we had to fix some regexps which check returned results
	accordingly.

2006-03-09  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tcl/cache.tcl:     Reformated, added proper function
	* tcl/charsets.tcl:  headers, newly indented.
	* tcl/compat.tcl:    The http.tcl and sendmail.tcl are
	* tcl/fastpath.tcl:  rewritten to take advantage of 
	* tcl/file.tcl:      automatic end-of-line handling of
	* tcl/form.tcl:      Tcl channels. Also, fixed some bugs
	* tcl/http.tcl:      in EOF handling in both files. Fixed
	* tcl/nstrace.tcl:   bug in line-break algorythm for
	* tcl/sendmail.tcl:  quoted-printable MIME content with 
	* tcl/stats.tcl:     non-ascii data in sendmail.tcl.
	* tcl/util.tcl :     The nstrace.tcl is now self-contained
        and requires, nor loads, any external modules.

	* nsd/init.tcl: Moved introspective script to nstrace.tcl.
	The nstrace is now the sole interface for handling script 
	generation for interp initializations. Please look into
	the tcl/nstrace.tcl for more information.
	Removed ns_init and ns_cleanup procedures and use trace
	callbacks instead.
	
	* nsd/queue.c (ConnRun): uses Ns_ConnClearQuery() to
	avoid code duplication.
