@@ -1,3 +1,8 @@
+2006-03-10  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* tests/testserver/modules/testhttp.tcl:
+	Updated to handle network errors and perform proper reporting
+
 2006-03-10  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* tests/testserver/modules/testhttp.tcl:
